# animedrf

./: README.md
animesite/: .editorconfig  db.sqlite3  pyproject.toml  test.http
animesite/anime/: settings.py  urls.py
animesite/data/: anime.json
animesite/webapi/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
animesite/webapi/migrations/: 0001_initial.py
react-anime/: .editorconfig  package.json  vite.config.js
react-anime/src/: main.jsx  router.jsx
react-anime/src/components/: Comments.jsx  Loading.jsx  Navbar.jsx
react-anime/src/pages/: About.jsx  AllAnime.jsx  AnimeDetail.jsx  AnimeList.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  demo.jsx
react-anime/src/scss/: styles.scss
react-anime/src/styles/: Products.css
